monitoring/controllers/kube-prometheus-stack/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: cloudflare-prod
#    traefik.ingress.kubernetes.io/router.middlewares: google-oidc-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.example.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    - secretName: mcarcoba-end-cert
      hosts:
        - grafana.mcarcoba.com
